# stance-classification

./: .env.example  .gitignore  README.md  analyse_clf.py  analyse_clf_0822-25dec.ipynb  analytics.py  classifier.py  classifierREADME.md  data_loader.py  evaluate_clf.py  experiments.py  export_lda_viz.py  feedback.txt  llm_prompting.py  llm_stance.py  nb_1_analytics.ipynb  nb_1_analytics.py  nb_2_classifier.ipynb  nb_2_classifier.py  nb_2_sweep_analysis.py  nb_3_prompting.ipynb  nb_3_prompting.py  nb_main.py  ncc_prompt.ipynb  ncc_prompt.py  pyproject.toml  requirements.txt  submit_job.sh  sweep.yaml  temp.ipynb  visualize.py  wandb_classifier.py
.github/workflows/: deploy-twitter-viewer.yml
LDA/: index.html
LDA/comment/: index.html
LDA/stance/: index.html
data_preprocessing/: README.txt
downloaded_data/: README.md
practicals/: 01 Analysing the Dataset.ipynb  02 A Simple Model.ipynb  03 Finetuning Transformers.ipynb  04 Prompting LLMs.ipynb  05 Chain of Thought Prompting.ipynb  07 RAG.ipynb
results/analytics/: comment_LDA.html  stance_LDA.html
results/classifier/: classifierREADME.md  classifier_classification_report.csv  classifier_classification_report.txt  classifier_exp4_results.csv  confusion_matrix.csv
results/evaluation/: classification_report.csv  confusion_matrix.csv  summary.json  test_predictions.csv
results/prompting/: class_importance.csv  cot_classification_report.csv  cot_classification_report.txt  exp1_ablation.csv  exp4_test_final.csv  (+13 more)
saved_data/: datasets.pkl
twitter_viewer/: app.js  index.html  prepare_data.py  styles.css
(+9 files in other folders)
