[project]
name = "nlp-cswk"
version = "0.1.0"
description = "NLP coursework project"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    # ml
    "torch==2.9.1",
    "transformers==4.57.3",
    "peft==0.18.0",
    "accelerate==1.12.0",
    # nlp
    "spacy==3.8.11",
    "en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl",
    "nltk==3.9.2",
    "sentencepiece==0.2.1",
    "emoji==0.6.0",  # bertweet normalisation needs this fixed to 0.60
    "gensim==4.4.0",
    "outlines==1.2.9",  # needs python >3.10
    # data & ml utilities
    "pandas==2.3.3",
    "numpy==2.2.6",
    "scikit-learn==1.8.0",
    "tqdm==4.67.1",
    # visualization
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "wordcloud==1.9.5",
    # utilities
    "protobuf==6.33.2",
    "ipykernel==7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["data_loader.py"]
